examples/minio/minio-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: minio
  namespace:
  labels:
    app: minio
spec:
  containers:
  - name: minio
    image: minio/minio:latest
    args:
      - server
      - /storage
    ports:
    - containerPort: 9000
    volumeMounts:
    - name: data
      mountPath: /storage
    lifecycle:
      postStart:
        exec:
          command: ["/bin/sh", "-c", "mkdir -p /storage/bucket"]
  volumes:
  - name: data
    emptyDir: {}
