examples/minio/minio-sts.yaml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  namespace:
  name: minio
spec:
  serviceName: minio
  replicas: 4
  selector:
    matchLabels:
      app: minio 
  template:
    metadata:
      annotations:
      labels:
        app: minio
    spec:

      containers:
      - name: minio
        image: minio/minio:RELEASE.2017-08-05T00-00-53Z
        #image: minio/minio:RELEASE.2017-12-28T01-21-00Z
        #image: minio/minio:RELEASE.2017-10-27T18-59-02Z
        #image: minio/minio:RELEASE.2017-09-29T19-16-56Z
        args:
        - server
        - http://minio-0.minio.$(POD_NAMESPACE).svc.cluster.local/storage
        - http://minio-1.minio.$(POD_NAMESPACE).svc.cluster.local/storage
        - http://minio-2.minio.$(POD_NAMESPACE).svc.cluster.local/storage
        - http://minio-3.minio.$(POD_NAMESPACE).svc.cluster.local/storage
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: data
          mountPath: /storage
        livenessProbe:
          httpGet:
            path: /minio/health/live
            port: 9000
          initialDelaySeconds: 120
          periodSeconds: 20
  volumeClaimTemplates:
  - metadata:
      name: data
      annotations:
    spec:
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 2Gi
      storageClassName: rbd
