examples/minio/minio-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace:
  name: minio
  labels:
    app: minio
spec:
  clusterIP: None
  ports:
    - port: 9000
      name: minio
  selector:
    app: minio
